Introduce collage slugs, refator collage routes to use these
