# backend/app/Http/Resources/Collage/ShowCollageResource.php
@@ -18,6 +18,7 @@ class ShowCollageResource extends JsonResource
     {
         return [
             'id' => $this->id,
+            'slug' => $this->slug,
             'name' => $this->name,
             'description' => $this->description,
             'founded_at' => $this->founded_at,
